feat: 조회 API 구현