@@ -13,29 +13,29 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ECRService {
 
-    private final EcrClient ecrClient;
+	private final EcrClient ecrClient;
 
-    public List<String> getImageTags(String projectName) {
-        try {
-            ListImagesRequest request = ListImagesRequest.builder()
-                    .repositoryName(projectName)
-                    .build();
+	public List<String> getImageTags(String projectName) {
+		try {
+			ListImagesRequest request = ListImagesRequest.builder()
+					.repositoryName(projectName)
+					.build();
 
-            ListImagesResponse response = ecrClient.listImages(request);
+			ListImagesResponse response = ecrClient.listImages(request);
 
-            return response.imageIds().stream()
-                    .map(ImageIdentifier::imageTag)
-                    .toList();
-        } catch (EcrException e) {
-            throw new RuntimeException("ECR 접근 실패: " + e.getMessage(), e);
-        }
-    }
+			return response.imageIds().stream()
+					.map(ImageIdentifier::imageTag)
+					.toList();
+		} catch (EcrException e) {
+			throw new RuntimeException("ECR 접근 실패: " + e.getMessage(), e);
+		}
+	}
 
-    public List<String> listRepositories() {
+	public List<String> listRepositories() {
 		DescribeRepositoriesIterable paginator = ecrClient.describeRepositoriesPaginator();
-        return paginator.stream()
-                .flatMap(response -> response.repositories().stream())
-                .map(Repository::repositoryName)
-                .collect(Collectors.toList());
-    }
+		return paginator.stream()
+				.flatMap(response -> response.repositories().stream())
+				.map(Repository::repositoryName)
+				.toList();
+	}
 }
